@@ -12,13 +12,18 @@ import com.typesafe.sbt.SbtScalariform._
 import scala.collection.JavaConverters._
 
 object ScaldingBuild extends Build {
+
+  def scalaBinaryVersion(scalaVersion: String) = scalaVersion match {
+    case version if version startsWith "2.9" => "2.9"
+    case version if version startsWith "2.10" => "2.10"
+  }
+
   val printDependencyClasspath = taskKey[Unit]("Prints location of the dependencies")
 
   val sharedSettings = Project.defaultSettings ++ assemblySettings ++ scalariformSettings ++ Seq(
     organization := "com.twitter",
 
-    //TODO: Change to 2.10.* when Twitter moves to Scala 2.10 internally
-    scalaVersion := "2.9.3",
+    scalaVersion := "2.10.4",
 
     crossScalaVersions := Seq("2.9.3", "2.10.4"),
 
@@ -35,8 +40,9 @@ object ScaldingBuild extends Build {
     ),
 
     resolvers ++= Seq(
-      "snapshots" at "http://oss.sonatype.org/content/repositories/snapshots",
-      "releases" at "http://oss.sonatype.org/content/repositories/releases",
+      "Local Maven Repository" at "file://" + Path.userHome.absolutePath + "/.m2/repository",
+      "snapshots" at "https://oss.sonatype.org/content/repositories/snapshots",
+      "releases" at "https://oss.sonatype.org/content/repositories/releases",
       "Concurrent Maven Repo" at "http://conjars.org/repo",
       "Clojars Repository" at "http://clojars.org/repo",
       "Twitter Maven" at "http://maven.twttr.com",
@@ -47,6 +53,14 @@ object ScaldingBuild extends Build {
       val cp = (dependencyClasspath in Compile).value
       cp.foreach(f => println(s"${f.metadata.get(moduleID.key)} => ${f.data}"))
     },
+
+    fork in Test := true,
+
+    javaOptions in Test ++= Seq("-Xmx2048m", "-XX:ReservedCodeCacheSize=384m", "-XX:MaxPermSize=384m"),
+
+    concurrentRestrictions in Global := Seq(
+      Tags.limitAll(1)
+    ),
 
     parallelExecution in Test := false,
 
@@ -147,6 +161,8 @@ object ScaldingBuild extends Build {
     scaldingCommons,
     scaldingAvro,
     scaldingParquet,
+    scaldingParquetScrooge,
+    scaldingHRaven,
     scaldingRepl,
     scaldingJson,
     scaldingJdbc,
@@ -190,10 +206,10 @@ object ScaldingBuild extends Build {
     System.getenv.asScala.getOrElse("SCALDING_CASCADING_VERSION", "2.5.5")
 
   lazy val cascadingJDBCVersion =
-    System.getenv.asScala.getOrElse("SCALDING_CASCADING_JDBC_VERSION", "2.5.3")
+    System.getenv.asScala.getOrElse("SCALDING_CASCADING_JDBC_VERSION", "2.5.4")
 
   val hadoopVersion = "1.2.1"
-  val algebirdVersion = "0.7.0"
+  val algebirdVersion = "0.7.1"
   val bijectionVersion = "0.6.3"
   val chillVersion = "0.4.0"
   val slf4jVersion = "1.6.6"
@@ -208,6 +224,7 @@ object ScaldingBuild extends Build {
       "com.twitter" % "chill-java" % chillVersion,
       "com.twitter" %% "bijection-core" % bijectionVersion,
       "com.twitter" %% "algebird-core" % algebirdVersion,
+      "com.twitter" %% "algebird-test" % algebirdVersion % "test",
       "org.apache.hadoop" % "hadoop-core" % hadoopVersion % "provided",
       "org.slf4j" % "slf4j-api" % slf4jVersion,
       "org.slf4j" % "slf4j-log4j12" % slf4jVersion % "provided"
@@ -248,7 +265,7 @@ object ScaldingBuild extends Build {
 
   lazy val scaldingParquet = module("parquet").settings(
     libraryDependencies ++= Seq(
-      "com.twitter" % "parquet-cascading" % "1.4.0",
+      "com.twitter" % "parquet-cascading" % "1.6.0rc2",
       "org.slf4j" % "slf4j-api" % slf4jVersion,
       "org.apache.hadoop" % "hadoop-core" % hadoopVersion % "provided",
       "org.slf4j" % "slf4j-log4j12" % slf4jVersion % "test",
@@ -257,21 +274,73 @@ object ScaldingBuild extends Build {
     )
   ).dependsOn(scaldingCore)
 
-  lazy val scaldingRepl = module("repl").settings(
-    initialCommands in console := """
-      import com.twitter.scalding._
-      import com.twitter.scalding.ReplImplicits._
-      import com.twitter.scalding.ReplImplicitContext._
-      """,
-    libraryDependencies <++= (scalaVersion) { scalaVersion => Seq(
-      "org.scala-lang" % "jline" % scalaVersion,
-      "org.scala-lang" % "scala-compiler" % scalaVersion,
-      "org.apache.hadoop" % "hadoop-core" % hadoopVersion % "provided",
+  def scaldingParquetScroogeDeps(version: String) = {
+    if (scalaBinaryVersion(version) == "2.9")
+      Seq()
+    else
+      Seq(
+        "com.twitter" % "parquet-cascading" % "1.6.0rc2",
+        "com.twitter" %% "parquet-scrooge" % "1.6.0rc2",
+        "org.slf4j" % "slf4j-api" % slf4jVersion,
+        "org.apache.hadoop" % "hadoop-core" % hadoopVersion % "provided",
+        "org.slf4j" % "slf4j-log4j12" % slf4jVersion % "test",
+        "org.scalacheck" %% "scalacheck" % "1.10.0" % "test",
+        "org.scala-tools.testing" %% "specs" % "1.6.9" % "test"
+      )
+  }
+
+  lazy val scaldingParquetScrooge = module("parquet-scrooge").settings(
+    skip in compile := scalaBinaryVersion(scalaVersion.value) == "2.9",
+    skip in test := scalaBinaryVersion(scalaVersion.value) == "2.9",
+    publishArtifact := !(scalaBinaryVersion(scalaVersion.value) == "2.9"),
+    libraryDependencies ++= scaldingParquetScroogeDeps(scalaVersion.value)
+  ).dependsOn(scaldingCore, scaldingParquet % "compile->compile;test->test")
+
+  lazy val scaldingHRaven = module("hraven").settings(
+    libraryDependencies ++= Seq(
+      "com.twitter.hraven" % "hraven-core" % "0.9.13",
+      "org.apache.hbase" % "hbase" % "0.94.10",
       "org.slf4j" % "slf4j-api" % slf4jVersion,
-      "org.slf4j" % "slf4j-log4j12" % slf4jVersion % "provided"
+      "org.apache.hadoop" % "hadoop-core" % hadoopVersion % "provided",
+      "org.slf4j" % "slf4j-log4j12" % slf4jVersion % "test",
+      "org.scalacheck" %% "scalacheck" % "1.10.0" % "test",
+      "org.scala-tools.testing" %% "specs" % "1.6.9" % "test"
     )
-    }
   ).dependsOn(scaldingCore)
+
+  // create new configuration which will hold libs otherwise marked as 'provided'
+  // so that we can re-include them in 'run'. unfortunately, we still have to
+  // explicitly add them to both 'provided' and 'unprovided', as below
+  // solution borrowed from: http://stackoverflow.com/a/18839656/1404395
+  val Unprovided = config("unprovided") extend Runtime
+
+  lazy val scaldingRepl = module("repl")
+    .configs(Unprovided) // include 'unprovided' as config option
+    .settings(
+      initialCommands in console := """
+        import com.twitter.scalding._
+        import com.twitter.scalding.ReplImplicits._
+        import com.twitter.scalding.ReplImplicitContext._
+        """,
+      libraryDependencies <++= (scalaVersion) { scalaVersion => Seq(
+        "org.scala-lang" % "jline" % scalaVersion,
+        "org.scala-lang" % "scala-compiler" % scalaVersion,
+        "org.apache.hadoop" % "hadoop-core" % hadoopVersion % "provided",
+        "org.apache.hadoop" % "hadoop-core" % hadoopVersion % "unprovided",
+        "org.slf4j" % "slf4j-api" % slf4jVersion,
+        "org.slf4j" % "slf4j-log4j12" % slf4jVersion % "provided",
+        "org.slf4j" % "slf4j-log4j12" % slf4jVersion % "unprovided"
+      )
+      }
+  ).dependsOn(scaldingCore)
+  // run with 'unprovided' config includes libs marked 'unprovided' in classpath
+  .settings(inConfig(Unprovided)(Classpaths.configSettings ++ Seq(
+    run <<= Defaults.runTask(fullClasspath, mainClass in (Runtime, run), runner in (Runtime, run))
+  )): _*)
+  .settings(
+    // make scalding-repl/run use 'unprovided' config
+    run <<= (run in Unprovided)
+  )
 
   lazy val scaldingJson = module("json").settings(
     libraryDependencies <++= (scalaVersion) { scalaVersion => Seq(
